--- a/global2.css
+++ b/global2.css
@@ -68,33 +68,37 @@ header {
     background-color: var(--background-accent-color);
 }
 
+.icon {
+    font-size: 5rem;
+}
+
 .mobile-menu {
-    display:none;
+    display: none;
+}
+
+button {
+    width: 50px;
+    height: 50px;
 }
 
 .mobile-menu-items {
     display: none;
 }
 
-@media (max-width: 800px) {
+.show {
+    display: block;
+}
+
+@media (max-width: 600px) {
     nav {
         display: none;
     }
+    
     aside {
         display: none;
     }
-    main {
-        width: 100%;
-    }
-    .mobile-menu{
-        display: flex;
-        gap: 2rem;
-        padding: 2rem;
-        justify-content: center;
-    }
-}
 
-.show {
-    display: flex;
-    flex-direction: column;
+    .mobile-menu {
+        display: block;
+    }
 }
